<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaggingApp</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="guest">Guest</string>
    <string name="title_activity_photo_grid">PhotoGrid</string>
    <string name="title_activity_swipe_super">SwipeSuper</string>
    <string name="emailHint">eMail</string>
    <string name="passHint">Password</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="camera">Camera</string>
    <string name="title_activity_view_full_pic">ViewFullPic</string>
    <string name="title_activity_tag_and_photo">TagAndPhoto</string>
    <string name="title_activity_tag_refined_images">TagRefinedImages</string>
    <string name="title_activity_edit_tag">EditTag</string>
    <string name="title_activity_add_tag">Add</string>
    <string name="logout">Logout</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="add">Add</string>
    <string name="accept">Accept</string>
    <string name="discard">Discard</string>
    <string name="decline">Decline</string>
    <string name="title_activity_add_name_to_tag">AddNameToTag</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_prompt">Prompt"</string>

    <string-array name="action_list">
        <item>Select Tagging Method</item>
        <item>Zoom</item>
        <item>Drag</item>
        <item>Double Tap</item>
    </string-array>
        <string name="tag_name">Tag Name</string>
        <string name="tag_url">Tag URL</string>
        <string name="tags_associated_with_this_picture">Tags Associated with this Picture</string>
        <string name="delete_tag">Delete Tag</string>
        <string name="save">Save</string>
    
</resources>
