<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#070924"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/Guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SignUp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/guest"
        android:textColor="#FFFFFF"
        android:background="@android:color/transparent"
        android:onClick="loginGuest" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Guest"
        android:layout_alignLeft="@+id/Login"
        android:layout_alignParentRight="true"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:background="@android:color/transparent"
        android:onClick="signUp" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SignUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:background="@android:color/transparent"
        android:onClick="loginUser" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="131dp"
        android:ems="10"
        android:textColorHint="#AAAAAA"
        android:gravity="center_horizontal"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:maxLines="1" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:textColorHint="#AAAAAA"
        android:gravity="center_horizontal"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:maxLines="1" />

</RelativeLayout>
