<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070924"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUp" >

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SignUp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/SignUp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/confirmPass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:onClick="createUser"
        android:text="@string/signup"
        android:textColor="#FFFFFF" />

</RelativeLayout>